# kicad-si-simulation-wrapper

./: .buildinfo  .ci.yml  .gitignore  README.md  genindex.html  index.html  installation.html  introduction.html  objects.inv  pyproject.toml  quick-start.html  searchindex.js  usage.html
.github/workflows/: docs.yml  test.yml
_sources/: index.md.txt  installation.md.txt  introduction.md.txt
docs/: requirements.txt
docs/source/: conf.py  quick-start.md  usage.md
src/si_wrapper/: config.py  constant.py  create_settings.py  generate_slices.py  gerber2png.py  kicad2net_img.py  main.py  overlay_render.py  pcbslicer.py  renumerator.py  slice.py
src/si_wrapper/footprint/: Simulation_Port.kicad_mod
