[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "si-wrapper"
version = "0.9.0"
dependencies = [
  "numpy>=1.23.0",
  "matplotlib>=3.5.0",
  "coloredlogs>=15.0.1",
  "pyyaml",
  "Pillow>=10.0.1",
  "typer>=0.12.3"
]

[project.scripts]
si-wrapper= "si_wrapper.main:app"

[project.optional-dependencies]
dev = ["mypy", "ruff", "black"]

[tool.setuptools]
package-dir = { "si_wrapper" = "src/si_wrapper" }

[tool.setuptools.package-data]
"si_wrapper" = ["footprint/Simulation_Port.kicad_mod"]

[tool.ruff]
select = ["E", "F", "N", "B", "D", "A", "RET"]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true

