[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "si-wrapper"
version = "0.9.0"
dependencies = [
  "numpy>=1.23.0",
  "matplotlib>=3.5.0",
  "coloredlogs>=15.0.1",
  "pyyaml",
  "typer>=0.12.3"
]

[project.scripts]
si-wrapper= "si_wrapper.main:app"

[project.optional-dependencies]
dev = ["mypy", "ruff", "black"]
render = ["pcbooth @ git+https://github.com/antmicro/pcbooth.git@2dcbd1211d3b3dc3bc73388b4df8383889428ce5", "gerber2blend @ git+https://github.com/antmicro/gerber2blend.git@0f032003a159d4abb9bcc95197cd7139eacadffd]

[tool.setuptools]
package-dir = { "si_wrapper" = "src/si_wrapper" }

[tool.setuptools.package-data]
"si_wrapper" = ["footprint/Simulation_Port.kicad_mod"]

[tool.ruff.lint]
select = ["E", "F", "N", "B", "A", "RET"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
	"docs",
	"src/si_wrapper/__init__.py",
]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

